--- a/src/app/features/auth/containers/login/login.component.html
+++ b/src/app/features/auth/containers/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<h2>Login</h2>
+
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+
+    <label>Email</label>
+    <input type="email" formControlName="email" />
+
+    <label>Password</label>
+    <input type="password" formControlName="password" />
+
+    <button type="submit">Login</button>
+
+</form>
