--- a/src/app/features/tasks/containers/task-list/task-list.component.html
+++ b/src/app/features/tasks/containers/task-list/task-list.component.html
@@ -1,2 +1,46 @@
 <app-navbar></app-navbar>
-<p>task-list works!</p>
+
+<div style="padding: 16px;">
+    <h2>Tasks</h2>
+
+    <table mat-table [dataSource]="tasks" class="mat-elevation-z8">
+
+        <!-- Title -->
+        <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef> Title </th>
+            <td mat-cell *matCellDef="let task"> {{ task.title }} </td>
+        </ng-container>
+
+        <!-- Status -->
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef> Status </th>
+            <td mat-cell *matCellDef="let task">
+                <mat-chip color="primary" selected>
+                    {{ task.status }}
+                </mat-chip>
+            </td>
+        </ng-container>
+
+        <!-- Priority -->
+        <ng-container matColumnDef="priority">
+            <th mat-header-cell *matHeaderCellDef> Priority </th>
+            <td mat-cell *matCellDef="let task">
+                <mat-chip color="warn" selected>
+                    {{ task.priority }}
+                </mat-chip>
+            </td>
+        </ng-container>
+
+        <!-- Due Date -->
+        <ng-container matColumnDef="dueDate">
+            <th mat-header-cell *matHeaderCellDef> Due Date </th>
+            <td mat-cell *matCellDef="let task">
+                {{ task.dueDate | date }}
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    </table>
+</div>
