Day 9: Added edit and delete task functionality using Angular Material dialogs

--- a/src/app/features/tasks/components/add-task-dialog/add-task-dialog.component.html
+++ b/src/app/features/tasks/components/add-task-dialog/add-task-dialog.component.html
@@ -1,4 +1,7 @@
-<h2 mat-dialog-title>Add Task</h2>
+<h2 mat-dialog-title>
+    {{ data ? 'Edit Task' : 'Add Task' }}
+</h2>
+
 
 <form [formGroup]="taskForm" (ngSubmit)="submit()">
 
@@ -44,7 +47,7 @@
     <mat-dialog-actions align="end">
         <button mat-button mat-dialog-close>Cancel</button>
         <button mat-raised-button color="primary" type="submit" [disabled]="taskForm.invalid">
-            Add
+            {{ data ? 'Update' : 'Add' }}
         </button>
     </mat-dialog-actions>
 
