--- a/src/app/features/tasks/containers/task-list/task-list.component.html
+++ b/src/app/features/tasks/containers/task-list/task-list.component.html
@@ -48,6 +48,19 @@
                 </td>
             </ng-container>
 
+            <!-- Actions -->
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef> Actions </th>
+                <td mat-cell *matCellDef="let task">
+                    <button mat-icon-button color="primary" (click)="editTask(task)">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button color="warn" (click)="deleteTask(task.id)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
